--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100%;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,4 +14,11 @@
     padding:50px 20px;
   }
 
+}
+.hottable-container, .button-container {
+  display: flex;
+  justify-content: center;
+  margin: 3em 1em;
+  text-align: center;
+  width: 100%;
 }
