--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,10 +16,12 @@
   <button type="button" (click)="exportToCSV()" tabindex="2">Export to CSV</button>
   <button type="button" (click)="exportToExcel()" tabindex="3">Export to Excel</button>
   <div>
-    <input type='file' accept='text/json' multiple (change)='openFile($event)' tabindex="4">
+    <input type='file' accept='text/json' (change)='openFile($event)' tabindex="4" value="C:\Users">
   </div>
   <button type="button" (click)="saveFile()" tabindex="5">Save File</button>  
   <button type="button" (click)="showPromptBox()" tabindex="6">Show Prompt Box</button>  
 </div>
 <app-prompt-box (onPrompt)="onPromptAction($event)"></app-prompt-box>
-<!-- <iframe [src]='uriString' width="640" height="360" ></iframe> -->
+<ul *ngIf="recentProjects.length"><b>Recent Projects:</b>
+  <li *ngFor="let project of recentProjects">{{project}}</li>
+</ul>
